# satellite_wallpaper_repoA

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: config_loader.py  projects.json  runtime_config.json  sat_selector.json  views_config.json
scripts/companions/: companion_selector.py
scripts/deploy/: deploy-wallpaper.py  list_monitors.py  set_static_wallpapers.py
scripts/fetch/: working_fetcher.py
scripts/metadata/: embed_geo_from_csv.py  geo_sidecar_from_filename.py  regen_places_from_filenames.py
src/satellite_wallpaper/: agent.py
tests/: test_agent.py
tools/: deploy_only.ps1  fetch_only.ps1  fetch_then_deploy.bat  refresh_we.ps1  run_fetch_deploy.ps1  select_sat_view.ps1
