[project]
name = "satellite-wallpaper-repoa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "boto3>=1.40.20",
    "botocore>=1.40.20",
    "pillow>=11.3.0",
    "pydantic-ai>=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-randomly>=3.16.0",
    "pytest-xdist>=3.8.0",
]
